# llm-plugin-utils

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/api/: chat.rs  embeddings.rs  mod.rs  parsing.rs
